--- a/galeria.html
+++ b/galeria.html
@@ -16,13 +16,13 @@
   </head>
   <body>
     <div id="logo">
-      <a href="home.html"
+      <a href="index.html"
         ><img src="logo.jpg" alt="salon" width="320" height="175"
       /></a>
     </div>
     <nav>
       <ul>
-        <a href="home.html"><li>HOME</li></a>
+        <a href="index.html"><li>HOME</li></a>
         <a href="o mnie.html"><li>O MNIE</li></a>
         <a href="galeria.html"><li>GALERIA</li></a>
         <a href="cennik.html"><li>CENNIK</li></a>
