--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projekt strony salonu fryzjerskiego</title>
     <link rel="stylesheet" href="css/fontello.css" type="text/css" />
-    <link rel="stylesheet" href="homecss.css" type="text/css" />
+    <link rel="stylesheet" href="indexcss.css" type="text/css" />
     <script src="https://code.jquery.com/jquery-3.7.0.slim.min.js"></script>
   </head>
   <body>
     <div id="logo">
-      <a href="home.html"
+      <a href="index.html"
         ><img src="logo.jpg" alt="salon" width="320" height="175"
       /></a>
     </div>
     <nav>
       <ul>
-        <a href="home.html"><li>HOME</li></a>
+        <a href="index.html"><li>HOME</li></a>
         <a href="o mnie.html"><li>O MNIE</li></a>
         <a href="galeria.html"><li>GALERIA</li></a>
         <a href="cennik.html"><li>CENNIK</li></a>
